<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="madproject.calculatorapp.MainActivity">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:text="@string/FullCal"
        android:textSize="18pt" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="131dp"
        android:onClick="onClick"
        android:text="@string/stdCal"
        android:textSize="10pt"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="18dp"
        android:onClick="onClick"
        android:text="@string/sciCal"
        android:textSize="10pt"/>


    <ImageView
        android:id="@+id/img4"
        android:layout_width="300px"
        android:layout_height="300px"
        android:layout_below="@id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="152dp"
        android:src="@drawable/bg_result" />

    <TextView
        android:id="@+id/text10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img4"
        android:layout_marginTop="15dp"
        android:textSize="15pt"
        android:text="@string/madeby" />

    <TextView
        android:id="@+id/text11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text10"
        android:layout_marginTop="4dp"
        android:text="@string/madeby1"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/text12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text11"
        android:layout_marginTop="5dp"
        android:text="@string/madeby2"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/text13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text12"
        android:layout_marginTop="9dp"
        android:text="@string/madeby3"
        android:textSize="8pt" />

</RelativeLayout>
